Become Distributor page added

--- a/css/style.css
+++ b/css/style.css
@@ -256,29 +256,112 @@ button:focus {
     display: block;
 }
 
+body.page-no-arc .content-wrapper .content{
+    position: relative;
+}
+
+body.page-no-arc .section {
+    background-size: 100% auto;
+    background-position: center;
+}
+
+body.open #menu-toggle {
+    visibility: hidden;
+}
+
+body.open #headerSvg img {
+    visibility: hidden;
+}
+
+#main-menu {
+    background-color: transparent;
+}
+
+#main-menu hr {
+    border-top: 1px solid #FFF;
+}
+
+/* Form Input */
+
+.content form {
+    color: #FFFFFF;
+}
+
+.input-text>* {
+    display: block;
+}
+
+.input-text,
+.input-text input {
+    width: 100%;
+}
+
+.input-text {
+    padding: 10px 5px;
+}
+
+.input-text label {
+    margin-bottom: 10px;
+}
+
+.input-text input {
+    padding: 10px;
+}
+
+.logo-container label {
+    display: block;
+    margin-bottom: 10px;
+}
+
+.logo {
+    background-color: rgba(255, 255, 255, 0.1);
+    width: 100px;
+    height: 100px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 50px;
+    margin-bottom: 30px;
+}
+
+.logo img {
+    display: none;
+}
+
+.logo span {
+    font-size: 40px;
+}
+
+.button-primary {
+    margin: 30px 10px;
+}
+
+.button-primary button {
+    width: 100%;
+    padding: 10px 30px;
+    background: #E50B00;
+    border: 0;
+    color: #FFF;
+    border-radius: 5px;
+    font-size: 17px
+}
+
 
 @media screen and (max-width: 768px) {
     #mainMenuContainer,
     #main-menu {
-        width: 100%;
-    }
-
-    #main-menu {
-        background-color: rgba(39, 41, 43, 0.9);
+        /* width: 100%; */
     }
 
     #main-menu>a>img {
-        width: 80px;
     }
 
     body.open .menu-button-container {
-        margin-left: unset !important;
+        /* margin-left: unset !important;
         width: 100%;
-        top: 0px;
+        top: 0px; */
     }
 
     body.open #menu-toggle {
-        position: absolute;
+        /* position: absolute;
         width: 40px;
         height: 40px;
         top: 20px;
@@ -286,7 +369,7 @@ button:focus {
         color: transparent;
         border-radius: 20px;
         border: 0;
-        background-color: rgba(0, 0, 0, 0.5);
+        background-color: rgba(0, 0, 0, 0.5); */
     }
 
     body.open #menu-toggle:after {
