Update Become a Distributor page

--- a/css/common.css
+++ b/css/common.css
@@ -324,6 +324,11 @@ body {
     display: inline-flex;
     display: -webkit-flex;
 }
+.d-flex-important {
+    display: flex !important;
+    display: inline-flex !important;
+    display: -webkit-flex !important;
+}
 
 .flex-column {
     display: flex;
@@ -994,6 +999,14 @@ body {
     width: 1150px;
 }
 
+.max-w500 {
+    max-width: 700px;
+}
+
+.max-w700 {
+    max-width: 700px;
+}
+
 .max-w1280 {
     max-width: 1280px;
 }
@@ -1635,7 +1648,7 @@ body {
 }
 
 .p-0 {
-    padding: 0px;
+    padding: 0px !important;
 }
 
 .p-5 {
